--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -53,6 +53,8 @@
 @using BLAZAM.Gui.UI.Inputs
 @using BLAZAM.Gui.Layouts;
 @using BLAZAM.Gui.UI.Settings;
+@using BLAZAM.Gui.UI.Chat
+
 @using BLAZAM.Gui.UI.Groups
 @using BLAZAM.Gui.UI.Users.Fields
 @using BLAZAM.Gui.UI.Users
