--- a/BLAZAMGui/UI/Settings/Permissions/ImpersonateUser.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/ImpersonateUser.razor
@@ -35,8 +35,18 @@
     async void AttemptSignIn()
     {
         string? authenticationResult=null;
-        if (User!=null)
-            authenticationResult = await JSRuntime.InvokeAsync<string>("attemptSignIn", null);
+        if (User != null)
+        {
+            try
+            {
+                authenticationResult = await JSRuntime.InvokeAsync<string>("attemptSignIn", null);
+
+            }
+            catch
+            {
+                
+            }
+        }
 
 
 
