--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -47,6 +47,7 @@
 @using BLAZAM.Gui.UI.Users
 @using BLAZAM.Gui.UI.Users.Fields
 @using BLAZAM.Gui.UI.OU
+@using BLAZAM.Gui.UI.Chat
 @using BLAZAM.Gui.UI.Groups
 @using BLAZAM.Gui.UI.Settings
 @using BLAZAM.Gui.UI.Settings.Templates
