--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -26,6 +26,7 @@
 @using BLAZAM.Database.Models;
 @using BLAZAM.Database.Models.Permissions;
 @using BLAZAM.Database.Models.Templates;
+@using BLAZAM.Database.Models.Chat;
 
 
 @using BLAZAM.Logger
