--- a/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
@@ -15,8 +15,13 @@
              Class="py-0"
              SortMode="SortMode.Single">
     <Columns>
-        <PropertyColumn Property="x => x.CanonicalName" Title="Name" />
-        <PropertyColumn Property="x => x.OU.ToPrettyOu()" Title="OU" />
+        <TemplateColumn Title="Name">
+            <CellTemplate>
+                <MudTooltip Text="@context.Item.OU.ToPrettyOu()">
+                    <MudText>@context.Item.CanonicalName</MudText>
+                </MudTooltip>
+            </CellTemplate>
+        </TemplateColumn>
         <TemplateColumn Title="Locked Out">
             <CellTemplate>
                 @if (context.Item.LockoutTime != null)
