--- a/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
@@ -16,8 +16,13 @@
              Class="py-0"
              SortMode="SortMode.Single">
     <Columns>
-        <PropertyColumn Property="x => x.CanonicalName" Title="Name" />
-        <PropertyColumn Property="x => x.OU.ToPrettyOu()" Title="OU" />
+        <TemplateColumn Title="Name">
+            <CellTemplate>
+                <MudTooltip Text="@context.Item.OU.ToPrettyOu()">
+                    <MudText>@context.Item.CanonicalName</MudText>
+                </MudTooltip>
+            </CellTemplate>
+        </TemplateColumn>
         <TemplateColumn Title="Created">
             <CellTemplate>
                 @if (context.Item.Created != null)
